[package]
name = "pi_wasm_engine"
version = "0.1.0"
authors = ["suncy <suncy@yineng.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pi_js_export", "release"]
release = ["log/release_max_level_warn", "tracing/release_max_level_off"]
trace = ["log/release_max_level_info", "tracing/release_max_level_info", "pi_bevy_log/tracing-chrome", "pi_bevy_render_plugin/trace", "bevy_app/trace", "bevy_ecs/trace"]
pi_js_export = []

[dependencies]
async-executor = "=1.6.0" #1.7.1bug
pi_export_gui = { path = "../gui", default-features=false, features=["record"] }
# pi_export_astar = { path = "../astar"}
# pi_export_base = { path = "../base", features = ["allow_not_run"]}
pi_export_base = { path = "../base"}
pi_spine_export = { path = "../pi_spine_export"}
# pi_export_quad_tree = { path = "../quad_tree"}
scene3d_export = { path = "../scene3d" }
pi_web_logger = {git = "http://ser.yinengyun.com:10082/tech/pi_web_logger.git"}
pi_share = "0.4"

# wasm-bindgen = { version = "0.2"}
wasm-bindgen = { version = "0.2" }
bevy_ecs = "0.11"
bevy_app = "0.11"

log = "0.4"
tracing = "0.1"

# 添加webgl feature
# wgpu1 = { version = "0.19", package = "wgpu", default-features = false, features = ["glsl", "webgl"] }
pi_render = { version = "0.1", registry = "yn", features=["webgl"] }
pi_bevy_render_plugin = { version = "0.1", registry = "yn", features=["webgl"]}
pi_bevy_log = {version = "0.1", registry = "yn"}
pi_wgpu =  {version = "0.1", registry = "yn", features = ["single_thread"]}
# pi_wgpu =  {version = "0.1", registry = "yn", features = ["single_thread", "use_wgpu"]}


getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
pi-async-rt = {version = "0.1", features = ["serial"]}
uuid = { version = "1", features = ["js"] }


# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']


