[package]
name = "pi_export_gui"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2021"

[dependencies]
paste = "0.1"
# pi_export_macro = {path="../../macro"}
tracing = "0.1"

[features]
default = ["pi_js_export", "wasm_bindgen", "trace"]
pi_js_export = []
wasm_bindgen = []
trace = []